better color options; fixed collapsables;

--- a/source/scss/_collapsables.scss
+++ b/source/scss/_collapsables.scss
@@ -44,6 +44,7 @@ h6.collapsable-processed {
     }
   }
   &.transition.closed {
+	  border-bottom:2px transparent solid;
     padding-top:grid(2);
     &:before {
       top:grid(2);
