--- a/source/scss/variables/_colors.scss
+++ b/source/scss/variables/_colors.scss
@@ -7,9 +7,9 @@ $tyfy-color-primary:#4185de !default;
 $tyfy-color-text-body:$tyfy-color-foreground !default;
 $tyfy-color-text-head:mix($tyfy-color-foreground,$tyfy-color-background,95%) !default;
 $tyfy-color-text-light:mix($tyfy-color-foreground,$tyfy-color-background,45%) !default;
-$tyfy-color-text-pullquote:$tyfy-color-primary !default;
+$tyfy-color-text-pullquote:adjust-hue($tyfy-color-primary,120deg) !default;
 $tyfy-color-link-default:color($tyfy-color-primary,(lightness($tyfy-color-primary)-15%)) !default;
-$tyfy-color-link-active:complement($tyfy-color-link-default) !default;
+$tyfy-color-link-active:adjust-hue($tyfy-color-link-default,-120deg) !default;
 $tyfy-color-border:mix($tyfy-color-foreground,$tyfy-color-background,10%) !default;
 $tyfy-color-table-stripe:mix($tyfy-color-foreground,$tyfy-color-background,5%) !default;
 
@@ -17,8 +17,8 @@ $tyfy-color-table-stripe:mix($tyfy-color-foreground,$tyfy-color-background,5%) !
 $tyfy-color-text-body-reverse:reverse($tyfy-color-text-body) !default;
 $tyfy-color-text-head-reverse:reverse($tyfy-color-text-head) !default;
 $tyfy-color-text-light-reverse:reverse($tyfy-color-text-light) !default;
-$tyfy-color-text-pullquote-reverse:color($tyfy-color-primary,(lightness($tyfy-color-primary)+20%)) !default;
+$tyfy-color-text-pullquote-reverse:color(adjust-hue($tyfy-color-primary,120deg),(lightness($tyfy-color-primary)+15%)) !default;
 $tyfy-color-link-default-reverse:color($tyfy-color-primary,(lightness($tyfy-color-primary)+15%)) !default;
-$tyfy-color-link-active-reverse:complement($tyfy-color-link-default-reverse) !default;
+$tyfy-color-link-active-reverse:adjust-hue($tyfy-color-link-default-reverse,-120deg) !default;
 $tyfy-color-border-reverse:fade-out(reverse($tyfy-color-text-body),0.85) !default;
 $tyfy-color-table-stripe-reverse:fade-out(reverse($tyfy-color-text-body),0.925) !default;
